--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,3 +1,3 @@
 {
-  "tagline": "ENG A source of work / life inspiration for young professionals."
+  "tagline": "A source of work / life inspiration for young professionals."
 }
