--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,3 +1,3 @@
 {
-  "tagline": "ESP A source of work / life inspiration for young professionals."
+  "tagline": "Fuente de inspiración laboral para jóvenes profesionales."
 }
