--- a/public/locales/sv/translation.json
+++ b/public/locales/sv/translation.json
@@ -1,3 +1,3 @@
 {
-  "tagline": "SWE A source of work / live inspiration for young professionals."
+  "tagline": "Din källa för inspiration och harmoni i arbetslivet."
 }
