passing tests for all languages in tagline :rainbow:
Co-authored-by: hunter <hmvitous@mail.com>
Co-authored-by: karro <karolina.frostare@gmail.com>

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,3 +1,9 @@
 {
-  "tagline": "A source of work / life inspiration for young professionals."
+  "tagline": "A source of work / life inspiration for young professionals.",
+  "read-more": "Read More",
+  "back": "Back",
+  "Login": "Login",
+  "Sign-in": "Sign in",
+  "Logout": "Logout",
+  "Submitted-on": "Submitted on:"
 }
