--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,3 +1,9 @@
 {
-  "tagline": "Fuente de inspiración laboral para jóvenes profesionales."
+  "tagline": "Fuente de inspiración laboral para jóvenes profesionales.",
+  "read-more": "Lee mas",
+  "back": "Atras",
+  "Login": "Iniciar sesión",
+  "Sign-in": "Registrarse",
+  "Logout": "Cerrar sesión",
+  "Submitted-on": "Publicado el:"
 }
