--- a/public/locales/sv/translation.json
+++ b/public/locales/sv/translation.json
@@ -1,3 +1,9 @@
 {
-  "tagline": "Din källa för inspiration och harmoni i arbetslivet."
+  "tagline": "Din källa för inspiration och harmoni i arbetslivet.",
+  "read-more": "Läs mer",
+  "back": "Tillbaka",
+  "Login": "Logga in",
+  "Sign-in": "Logga in",
+  "Logout": "Logga ut",
+  "Submitted-on": "Publicerad:"
 }
